<resources>
    <string name="app_name">My Application</string>
    <string name="sign_in">Masuk</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="password">Kata Sandi</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="sign_up">Daftar</string>
    <string name="let_s_create_an_account">Ayo buat akunmu</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="sign_up_with">Daftar dengan</string>
    <string name="don_t_have_an_account">Tidak punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="enter_the_otp">Enter the OTP we have send to your email</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="riwayat_permintaan_kantong_darah">Riwayat Permintaan Kantong Darah</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="keluar">Keluar</string>
    <string name="masuk_dengan">Masuk dengan</string>
    <string name="alamat">Alamat</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="kab">Kabupaten</string>
    <string name="prov">Provinsi</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="simpan">Simpan</string>

    <string name="donor">Donor</string>
    <string name="tentang_kemanusiaan">Murni membantu tampa pamrih dan tidak transaksi jual beli darah. Diharapkan pihak keluarga tidak memberikan uang atau imbalan ke Pendonor. Dengan saling membantu semoga dapat menjalin silaturahmi dan menambah yg persaudaraan</string>
    <string name="syarat_detail">• Kondisi fisik harus dalam keadaan sehat, jasmani maupun rohani.\n• Berusia 17-60 tahun.\n• Berat badan minimal 45 kilogram.\n• Tidak memiliki penyakit menular\n• Tidak baru melakukan operasi\n• Tidak baru mendapatkan vaksinasi.\n• Frekuensi donor darah maksimal lima kali setahun atau berjarak minimal tiga bulan.</string>
    <string name="tidak_bisa_donor_darah">• Mengidap Hipertensi\n• Berat Badan Kurang dari 45 Kg\n• Mengidap Hepatitis B dan C\n• Orang yang Sedang Hamil</string>
    <string name="desc">Rajin mendonorkan darah kira-kira mampu menurunkan risiko serangan jantung hingga 88 persen. Tak hanya itu, mendonorkan darah juga bisa meminimalkan risiko kanker, stroke, dan serangan jantung. Menariknya lagi, manfaat donor darah juga bisa membuat kadar zat besi dalam darah jadi stabil.\n\n"Darah yang Anda sumbangkan memberi seseorang kesempatan hidup lagi. Suatu hari, seseorang itu mungkin kerabat dekat, teman, orang yang dicintai atau bahkan Anda." - redcrossblood.org\n\nKamu bisa jadi pahlawan hanya dengan donor darah! Kamu dapat memberikan darah secara sukarela melalui transfusi darah untuk mereka yang membutuhkan.</string>
    <string name="faq1">Mengapa Kita Perlu Donor Darah ?</string>
    <string name="faq2">Apa Yang Harus Kita Persiapkan Sebelum Donor ?</string>
    <string name="faq3">Syarat Untuk Melakukan Donor Darah</string>
    <string name="faq4">Jangan Melakukan Donor Darah Jika</string>
    <string name="faq5">Apakah dengan Donor Darah dapat menyehatkan ?</string>
    <string name="faq6">Kapan harus menunda untuk menyumbangkan darah ?</string>
    <string name="faq7">Apakah Donor Trombosit Apheresis ?</string>
    <string name="faq8">Apa yang disebut trombosit (platelet) ?</string>
    <string name="faq9">Apa itu Rhesus?</string>
    <string name="faq10">Apa pentingnya mengetahui Rhesus darahmu ?</string>
    <string name="faq12">Apa jadinya jika kamu tidak mengetahui Rhesus darahmu ?</string>
    <string name="faq11">Apa itu Rhesus Negatif ?</string>

    <string name="desc_1">Setiap orang yang memenuhi syarat dapat mendonorkan darah, tetapi bergantung pada golongan darah Anda, Anda hanya dapat menerima jenis darah, plasma, atau trombosit tertentu. Apakah Anda tahu golongan darah Anda? Penting untuk diketahui karena golongan darah bisa cocok atau tidak cocok satu sama lain.</string>
    <string name="desc2">Ada delapan golongan darah yang berbeda, dan mereka tidak selalu cocok satu sama lain. Menariknya, orang yang memiliki darah O-negatif dianggap sebagai donor universal untuk seluruh populasi karena bisa mendonorkan darah ke seluruh jenis golongan darah.\n\nAda empat golongan darah utama: A, B, AB dan O. Kombinasi protein dan gula, yang disebut antigen, pada permukaan sel darah merah inilah yang membuat golongan darah tersebut cocok atau tidak cocok dengan golongan darah lainnya.\n\n• Misalnya, jika Anda bergolongan darah A, Anda hanya dapat menerima golongan darah A atau golongan darah O. Anda tidak dapat menerima golongan darah B atau golongan darah AB.\n• Jika Anda memiliki golongan darah B, Anda hanya dapat menerima golongan darah B atau golongan darah O. Anda tidak dapat menerima golongan darah A atau golongan darah AB.\n• Jika Anda memiliki golongan darah AB, Anda dapat menerima semua golongan darah.\n• Jika Anda memiliki golongan darah O, Anda hanya dapat menerima golongan darah O.</string>
    <string name="title1">Kesesuaian antar darah</string>
    <string name="title2">Bagan kompatibilitas golongan darah</string>
    <string name="on_going">On Going</string>

</resources>