<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KecocokanDarahActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title1"
            style="@style/bold_black"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_desc"
            style="@style/regular_black"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/desc_1"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="@+id/title1"
            app:layout_constraintStart_toStartOf="@+id/title1"
            app:layout_constraintTop_toBottomOf="@+id/title1" />

        <TextView
            android:id="@+id/title2"
            style="@style/bold_black"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="351dp"
            android:layout_height="339dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tabel_kecocokan_darah"
            app:layout_constraintEnd_toEndOf="@+id/title2"
            app:layout_constraintStart_toStartOf="@+id/title2"
            app:layout_constraintTop_toBottomOf="@+id/title2" />

        <TextView
            android:id="@+id/tv_desc2"
            style="@style/regular_black"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:paddingBottom="50dp"
            android:text="@string/desc2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>